@@ -15,6 +15,7 @@ xine-lib (1.1.8) (Unreleased)
   * Fix a crash with "dvb:/".
   * DVB subtitle fixes: deadlock prevention, thread leakage, spec compliance.
   * Allow the DVB input plugin to timeout if it is receiving no signal.
+  * Fix an audio resampling problem which was causing regular clicking.
 
 xine-lib (1.1.7)
   * Support libdca (new name for libdts) by shuffling around the dts.h file.
